Allow shell tool and v1 container file otuputs
